[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sms-client"
version = "0.1.0"
description = "CLI клиент для отправки SMS"
authors = [{ name = "Garckusha Vladimir" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tomli>=2.0.1; python_version < '3.11'",
    "aiofiles>=23.2.1"
]

[project.scripts]
sms-client = "sms_client.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sms_client"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.5",
    "types-tomli>=3.0; python_version < '3.11'"
]